tests: flash: common: Add disable spi nor case
Since the test is hardcoded to prioritize testing a spi nor flash if
there is one, add a twister case for disabling that config in case if a
platform should also test some other flash which is present, such as
internal SOC flash. I.e, relevant platforms would be those which have
both internal and spi nor flash enabled in DT.

Signed-off-by: Declan Snyder <declan.snyder@nxp.com>

--- a/tests/drivers/flash/common/testcase.yaml
+++ b/tests/drivers/flash/common/testcase.yaml
@@ -126,3 +126,7 @@ tests:
     platform_allow:
       - nrf52840dk/nrf52840
       - nrf5340dk/nrf5340/cpuapp
+  drivers.flash.common.disable_spi_nor:
+    filter: dt_compat_enabled("soc-nv-flash") and dt_compat_enabled("jedec,spi-nor")
+    extra_args:
+      - CONFIG_SPI_NOR=n
