soc: nrf53: Port SYS_INIT rtc_pretick_init to soc_late_init_hook
Port the SYS_INIT for rtc_pretick_init to use soc_late_init_hook as
SYS_INIT's are legacy.

Signed-off-by: Sebastian Bøe <sebastian.boe@nordicsemi.no>

--- a/soc/nordic/nrf53/Kconfig
+++ b/soc/nordic/nrf53/Kconfig
@@ -8,6 +8,7 @@ config SOC_SERIES_NRF53X
 	select ARM
 	select SOC_COMPATIBLE_NRF53X
 	select SOC_EARLY_INIT_HOOK
+	select SOC_LATE_INIT_HOOK
 	select CPU_CORTEX_M33
 	select CPU_CORTEX_M_HAS_DWT
 	select CPU_HAS_ARM_MPU
