drivers: rtc: add rtc support for apollo510
This commit adds support for apollo510 rtc

Signed-off-by: Hao Luo <hluo@ambiq.com>

--- a/boards/ambiq/apollo510_evb/apollo510_evb.dts
+++ b/boards/ambiq/apollo510_evb/apollo510_evb.dts
@@ -89,6 +89,11 @@
 	pinctrl-names = "default";
 };
 
+&rtc0 {
+	status = "disabled";
+	clock = "XTAL";
+};
+
 &uart0 {
 	current-speed = <115200>;
 	pinctrl-0 = <&uart0_default>;
