--- a/dts/arm/ambiq/ambiq_apollo510.dtsi
+++ b/dts/arm/ambiq/ambiq_apollo510.dtsi
@@ -149,6 +149,132 @@
 			status = "okay";
 		};
 
+		counter0: counter@40008200 {
+			compatible = "ambiq,counter";
+			reg = <0x40008200 0x20>;
+			interrupts = <67 0>;
+			clock-frequency = <DT_FREQ_M(6)>;
+			clk-source = <1>;
+			status = "disabled";
+		};
+
+		counter1: counter@40008220 {
+			compatible = "ambiq,counter";
+			reg = <0x40008220 0x20>;
+			interrupts = <68 0>;
+			clock-frequency = <DT_FREQ_M(6)>;
+			clk-source = <1>;
+			status = "disabled";
+		};
+
+		counter2: counter@40008240 {
+			compatible = "ambiq,counter";
+			reg = <0x40008240 0x20>;
+			interrupts = <69 0>;
+			clock-frequency = <DT_FREQ_M(6)>;
+			clk-source = <1>;
+			status = "disabled";
+		};
+
+		counter3: counter@40008260 {
+			compatible = "ambiq,counter";
+			reg = <0x40008260 0x20>;
+			interrupts = <70 0>;
+			clock-frequency = <DT_FREQ_M(6)>;
+			clk-source = <1>;
+			status = "disabled";
+		};
+
+		counter4: counter@40008280 {
+			compatible = "ambiq,counter";
+			reg = <0x40008280 0x20>;
+			interrupts = <71 0>;
+			clock-frequency = <DT_FREQ_M(6)>;
+			clk-source = <1>;
+			status = "disabled";
+		};
+
+		counter5: counter@400082a0 {
+			compatible = "ambiq,counter";
+			reg = <0x400082a0 0x20>;
+			interrupts = <72 0>;
+			clock-frequency = <DT_FREQ_M(6)>;
+			clk-source = <1>;
+			status = "disabled";
+		};
+
+		counter6: counter@400082c0 {
+			compatible = "ambiq,counter";
+			reg = <0x400082c0 0x20>;
+			interrupts = <73 0>;
+			clock-frequency = <DT_FREQ_M(6)>;
+			clk-source = <1>;
+			status = "disabled";
+		};
+
+		counter7: counter@400082e0 {
+			compatible = "ambiq,counter";
+			reg = <0x400082e0 0x20>;
+			interrupts = <74 0>;
+			clock-frequency = <DT_FREQ_M(6)>;
+			clk-source = <1>;
+			status = "disabled";
+		};
+
+		counter8: counter@40008300 {
+			compatible = "ambiq,counter";
+			reg = <0x40008300 0x20>;
+			interrupts = <75 0>;
+			clock-frequency = <DT_FREQ_M(6)>;
+			clk-source = <1>;
+			status = "disabled";
+		};
+
+		counter9: counter@40008320 {
+			compatible = "ambiq,counter";
+			reg = <0x40008320 0x20>;
+			interrupts = <76 0>;
+			clock-frequency = <DT_FREQ_M(6)>;
+			clk-source = <1>;
+			status = "disabled";
+		};
+
+		counter10: counter@40008340 {
+			compatible = "ambiq,counter";
+			reg = <0x40008340 0x20>;
+			interrupts = <77 0>;
+			clock-frequency = <DT_FREQ_M(6)>;
+			clk-source = <1>;
+			status = "disabled";
+		};
+
+		counter11: counter@40008360 {
+			compatible = "ambiq,counter";
+			reg = <0x40008360 0x20>;
+			interrupts = <78 0>;
+			clock-frequency = <DT_FREQ_M(6)>;
+			clk-source = <1>;
+			status = "disabled";
+		};
+
+		counter12: counter@40008380 {
+			compatible = "ambiq,counter";
+			reg = <0x40008380 0x20>;
+			interrupts = <79 0>;
+			clock-frequency = <DT_FREQ_M(6)>;
+			clk-source = <1>;
+			status = "disabled";
+		};
+
+		counter13: counter@400083a0 {
+			compatible = "ambiq,counter";
+			reg = <0x400083a0 0x20>;
+			interrupts = <80 0>;
+			clock-frequency = <DT_FREQ_M(6)>;
+			clk-source = <1>;
+			status = "disabled";
+		};
+
 		rtc0: rtc@RTC_BASE_NAME {
 			compatible = "ambiq,rtc";
 			reg = <RTC_REG_BASE RTC_REG_SIZE>;
