boards: nxp: frdm_mcxa153: Support lpi2c for NXP frdm_mcxa153 board
Support lpi2c for NXP frdm_mcxa153 board.

Signed-off-by: Neil Chen <cheng.chen_1@nxp.com>

--- a/boards/nxp/frdm_mcxa153/frdm_mcxa153-pinctrl.dtsi
+++ b/boards/nxp/frdm_mcxa153/frdm_mcxa153-pinctrl.dtsi
@@ -34,6 +34,18 @@
 		};
 	};
 
+	pinmux_lpi2c0: pinmux_lpi2c0 {
+		group0 {
+			pinmux = <LPI2C0_SDA_P1_8>,
+			    <LPI2C0_SCL_P1_9>;
+			slew-rate = "fast";
+			drive-strength = "low";
+			input-enable;
+			bias-pull-up;
+			drive-open-drain;
+		};
+	};
+
 	pinmux_lpuart0: pinmux_lpuart0 {
 		group0 {
 			pinmux = <LPUART0_RXD_P0_2>,
