--- a/boards/nxp/frdm_mcxa153/frdm_mcxa153-pinctrl.dtsi
+++ b/boards/nxp/frdm_mcxa153/frdm_mcxa153-pinctrl.dtsi
@@ -46,6 +46,18 @@
 		};
 	};
 
+	pinmux_lpspi0: pinmux_lpspi0 {
+		group0 {
+			pinmux = <LPSPI0_SDO_P1_0>,
+				 <LPSPI0_SCK_P1_1>,
+				 <LPSPI0_SDI_P1_2>,
+				 <LPSPI0_PCS0_P1_3>;
+			slew-rate = "fast";
+			drive-strength = "low";
+			input-enable;
+		};
+	};
+
 	pinmux_lpuart0: pinmux_lpuart0 {
 		group0 {
 			pinmux = <LPUART0_RXD_P0_2>,
