--- a/boards/nxp/frdm_mcxa153/frdm_mcxa153.dts
+++ b/boards/nxp/frdm_mcxa153/frdm_mcxa153.dts
@@ -138,6 +138,12 @@
 	pinctrl-names = "default";
 };
 
+&lpspi0 {
+	status = "okay";
+	pinctrl-0 = <&pinmux_lpspi0>;
+	pinctrl-names = "default";
+};
+
 &lpuart0 {
 	status = "okay";
 	current-speed = <115200>;
