--- a/subsys/mgmt/mcumgr/grp/os_mgmt/Kconfig
+++ b/subsys/mgmt/mcumgr/grp/os_mgmt/Kconfig
@@ -25,7 +25,7 @@ if REBOOT
 config MCUMGR_GRP_OS_RESET_MS
 	int "Delay before executing reset command (ms)"
 	default 250
-	depends on REBOOT
+	depends on MULTITHREADING
 	help
 	  When a reset command is received, the system waits this many milliseconds
 	  before performing the reset.  This delay allows time for the MCUmgr
@@ -33,7 +33,6 @@ config MCUMGR_GRP_OS_RESET_MS
 
 config MCUMGR_GRP_OS_RESET_HOOK
 	bool "Reset hook"
-	depends on REBOOT
 	depends on MCUMGR_MGMT_NOTIFICATION_HOOKS
 	help
 	  Allows applications to control and get notifications of when a reset
