--- a/dts/arm/realtek/ec/rts5912.dtsi
+++ b/dts/arm/realtek/ec/rts5912.dtsi
@@ -37,13 +37,13 @@
 		};
 	};
 
-	flash0: flash@20000400 {
-		reg = <0x20000400 0x4FC00>;
+	flash0: flash@2000B400 {
+		reg = <0x2000B400 0x40000>;
 	};
 
 	sram0: memory@20050000 {
 		compatible = "mmio-sram";
-		reg = <0x20050000 0x8000>;
+		reg = <0x20050000 0x10000>;
 	};
 
 	clocks {
