MAINTAINERS.yml: Update maintainers for regulator drivers
Remove gmarull, and add nordic-auko and seov-nordic as maintainers
for Drivers: Regulators in MAINTAINERS.yml file.

Signed-off-by: Audun Korneliussen <audun.korneliussen@nordicsemi.no>

--- a/MAINTAINERS.yml
+++ b/MAINTAINERS.yml
@@ -1865,7 +1865,8 @@ Release Notes:
 "Drivers: Regulators":
   status: maintained
   maintainers:
-    - gmarull
+    - nordic-auko
+    - seov-nordic
   collaborators:
     - danieldegrasse
     - aasinclair
