--- a/MAINTAINERS.yml
+++ b/MAINTAINERS.yml
@@ -1838,6 +1838,8 @@ Release Notes:
   status: odd fixes
   collaborators:
     - aasinclair
+    - nordic-auko
+    - seov-nordic
   files:
     - drivers/mfd/
     - include/zephyr/drivers/mfd/
